feat: added idle animation

--- a/frontend/rubby/src/styles.css
+++ b/frontend/rubby/src/styles.css
@@ -17,7 +17,7 @@ body {
   cursor: grab;
 
   /* Point this to your actual duck image */
-  background-image: url("./assets/duck.png");
+  background-image: url("./assets/duck_idle1.gif");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -26,7 +26,6 @@ body {
 #duck:active {
   cursor: grabbing;
 }
-
 
 @keyframes idle {
   0%,
