--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,37 +1,27 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
-  width: 300px;
-  height: 300px;
-  background: transparent;
-  overflow: hidden;
+    margin: 0;
+    padding: 0;
+    width: 300px;
+    height: 300px;
+    background: transparent;
+    overflow: hidden;
 }
 
 #duck {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  left: 0px;
-  top: 0px;
-  cursor: grab;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    left: 0px;
+    top: 0px;
+    cursor: grab;
 
-  background-image: url("./assets/duck_idle1.gif");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+    background-image: url('./assets/duck_idle1.gif');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 #duck:active {
-  cursor: grabbing;
-}
-
-@keyframes idle {
-  0%,
-  100% {
-    transform: translateY(0px);
-  }
-  50% {
-    transform: translateY(-5px);
-  }
+    cursor: grabbing;
 }
