feat: added whisper STT instead of the old implementation

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -25,3 +25,7 @@ body {
 #duck:active {
     cursor: grabbing;
 }
+
+/*#duck.listening {
+    background-image: url('./assets/duck-listen.webp');
+}*/
